<?xml version="1.0"?>
<package format="3">

  <name>interactive_waypoint</name>
  <version>0.1.0</version>

  <description>
    Interactive waypoint editor with TF-relative pose support
  </description>

  <maintainer email="user@example.com">
    user
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>interactive_markers</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>yaml-cpp</build_depend>
  
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>